# Summerschool_BAI_2025

./: .gitignore  End_result_for_local.ipynb  connecting_to_kernels.ipynb  intro_to_gradio.ipynb  pyproject.toml  readme.md  setup.ipynb
1_LANGCHAIN_FUNDAMENTALS/: 01_basic_finance_chatbot.ipynb  02_prompt_templates_personas.ipynb  03_message_history_memory.ipynb
2_LANGCHAIN_TOOLS_AND_AGENTS/: 04_custom_tools.ipynb  05_python_repl_financial_analysis.ipynb  06_financial_analyst_agent.ipynb  real_estate_agent_tool.ipynb
3_MULTI_AGENTS/: 07_multiple_specialized_agents.ipynb  08_agent_communication_handoffs.ipynb  09_langgraph_multi_agents.ipynb
4_MCP_INTEGRATION/: 085_easy_mcp_call.ipynb  09_mcp_tools_integration.ipynb  10_mcp_tool_wrapping.ipynb  mcp_tool.py
5_AUDIO_INTEGRATION/: 11_voice_financial_assistant.ipynb  12_simple_gradio_audio.ipynb
6_COMBINE/: End_result.ipynb  mcp_tool.py  readme.md
