[project]
name = "code"
version = "0.1.0"
dependencies = [
    "edge-tts>=7.0.2",
    "faiss-cpu>=1.11.0",
    "fastmcp>=2.10.1",
    "gradio>=5.35.0",
    "guardrails-ai>=0.1.8",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-mcp-tools>=0.2.8",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyttsx3>=2.98",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "speechrecognition>=3.14.3",
    "tiktoken>=0.9.0",
    "websockets>=15.0.1",
    "whisper>=1.1.10",
    "yfinance>=0.2.64",
]
